[package]
name = "image-features"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0"
lstsq = "0"
image = "0"
rayon = "1"
anyhow = "1"
ndarray = "0"
nalgebra = "0"
parking_lot = "0"
ndarray-rand = "0.14"
